--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,11 @@
 platform = espressif32
 board = esp32s3-n16r8
 framework = arduino
-lib_deps =
-  mikalhart/TinyGPSPlus @ ^1.0.3
+lib_deps = 
+	mikalhart/TinyGPSPlus @ ^1.0.3
+	mcci-catena/MCCI LoRaWAN LMIC library@^4.1.1
+build_flags = 
+	-D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
+	-D CFG_eu868=1
+	-D CFG_sx1276_radio=1
+	-Dhal_init=LMICHAL_init 
