add bme688 and veml7700

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,14 @@
 platform = espressif32
 board = esp32s3-n16r8
 framework = arduino
+monitor_filters = direct, esp32_exception_decoder
 lib_deps = 
 	mikalhart/TinyGPSPlus @ ^1.0.3
 	mcci-catena/MCCI LoRaWAN LMIC library@^4.1.1
+	adafruit/Adafruit BME680 Library@^2.0.2
+	adafruit/Adafruit VEML7700 Library@^2.1.2
 build_flags = 
 	-D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
 	-D CFG_eu868=1
 	-D CFG_sx1276_radio=1
-	-Dhal_init=LMICHAL_init 
+	-Dhal_init=LMICHAL_init
