--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,8 @@ lib_deps =
 	mcci-catena/MCCI LoRaWAN LMIC library@^4.1.1
 	adafruit/Adafruit BME680 Library@^2.0.2
 	adafruit/Adafruit VEML7700 Library@^2.1.2
+	adafruit/Adafruit SSD1306@^2.5.7
+	adafruit/Adafruit GFX Library@^1.11.3
 build_flags = 
 	-D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
 	-D CFG_eu868=1
